change cors config